components/Blogs/Blogs.module.scss
.blogItems {
    justify-content: space-evenly;
    padding: 2rem 0 5rem 0;
    columns: 300px;

    .singleItem {
        width: 30%;
        cursor: pointer;
        background: #fff;
        min-width: min(344px, 100%);

        >div {
            .blogImg {
                width: 100%;
                height: 400px;
                max-height: 500px;
                overflow: hidden;
                position: relative;

                img {
                    width: 100%;
                    height: 100%;
                    object-fit: cover;
                    opacity: 0.4;
                    transition: all .3s ease;

                    &:hover {
                        opacity: 1;
                        transform: scale(1.1);
                    }
                }
            }

            p {
                padding: 2rem;
                font-weight: 600;
                font-size: 1.3rem;
            }

            .hoverItem {
                position: absolute;
                bottom: 2rem;
                left: 2rem;
                background: #fff;
                padding: 0.5rem 1.7rem;
                font-weight: bold;
                letter-spacing: 1.5px;
                font-size: 12.9px;
                text-transform: uppercase;

            }

        }
    }
}

